--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Slash</title>
+    <title>Fengz'</title>
     <link rel="stylesheet" href="slash.css" media="screen" charset="utf-8">
     <script src="assets/vue.js" charset="utf-8"></script>
     <script src="assets/vue-router.min.js" charset="utf-8"></script>
