Personal access tokens

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta name="google" content="notranslate" />
 <link rel="icon" href="favicon.png?0" />
 <title> Mirror </title>
-<meta name="author" content="LoeiFy">
+<meta name="author" content="Fengz">
 <link rel="stylesheet" href="dist/mirror.css" />
 <script>
 
@@ -14,7 +14,7 @@
 var config = {
     user:       'YCF',         // GitHub Username
     repo:       'ycf.github.com',         // GitHub Repo
-    token:      '911cb946934d7b998932d2dddc06fef564f5ed79',         // GitHub access_token
+    token:      '3cff08af02af53e6d6fd8362faa655a13b75975e',         // GitHub access_token
     info:       'Do one thing and do it well.',         // About Yourself
     per_page:   7,          // Per Page Posts Number
     behance:    '',         // Behance URL
@@ -50,9 +50,8 @@ var config = {
 </div></div>
 
 <footer>
-    <a href="https://github.com/LoeiFy/Mirror" target="_blank">Mirror</a> . 
     Powered with <span>&hearts;</span> by 
-    <a href="https://github.com" target="_blank">GitHub</a> 
+    <a href="https://github.com/LoeiFy/Mirror" target="_blank">Mirror</a> &amp; <a href="https://github.com" target="_blank">GitHub</a> 
 </footer>
 
 </body>
