--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 var config = {
     user:       'YCF',         // GitHub Username
     repo:       'ycf.github.com',         // GitHub Repo
-    token:      '3cff08af02af53e6d6fd8362faa655a13b75975e',         // GitHub access_token
+    token:      '3cff08af02af53e6d6fd'+'8362faa655a13b75975e',       // GitHub access_token
     info:       'Do one thing and do it well.',         // About Yourself
     per_page:   7,          // Per Page Posts Number
     behance:    '',         // Behance URL
