--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ var config = {
     repo:       'ycf.github.com',         // GitHub Repo
     token:      '8adb17d3fa9eca44f9e6'+'70d5e61bfeaf6b1fb189',       // GitHub access_token
     info:       'Do one thing and do it well.',         // About Yourself
-    per_page:   7,          // Per Page Posts Number
+    per_page:   10,          // Per Page Posts Number
     behance:    '',         // Behance URL
     dribbble:   '',         // Dribbble URL
     instagram:  ''          // Instagram URL
@@ -51,7 +51,7 @@ var config = {
 
 <footer>
     Powered with <span>&hearts;</span> by 
-    <a href="https://github.com/LoeiFy/Mirror" target="_blank">Mirror</a> &amp; <a href="https://github.com" target="_blank">GitHub</a> 
+    <a href="https://github.com/LoeiFy/Mirror" target="_blank">Mirror</a> &amp; <a href="https://github.com" target="_blank">GitHub</a> .
 </footer>
 
 </body>
