--- a/index.html
+++ b/index.html
@@ -52,6 +52,6 @@ window.config = {"title":"Fengz' Cloud","user":"YCF","repo":"ycf.github.com","to
 
     </div>
 
-<script type="text/javascript" src="build.c4688d3ba5719cd2510e.js"></script></body>
+<script type="text/javascript" src="https://coding.net/u/fengz/p/Blog/git/raw/master/build.c4688d3ba5719cd2510e.js"></script></body>
 
 </html>
