--- a/index.html
+++ b/index.html
@@ -53,5 +53,5 @@ window.config = {"title":"Fengz' Cloud","user":"YCF","repo":"ycf.github.com","to
     </div>
 
 <script type="text/javascript" src="/build.c4688d3ba5719cd2510e.js"></script></body>
-
+<script type="text/javascript" src="http://tajs.qq.com/stats?sId=19326457" charset="UTF-8"></script>
 </html>
