--- a/index.html
+++ b/index.html
@@ -1,57 +1,104 @@
 <!DOCTYPE html>
 <html lang="en" class="loading">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width,minimum-scale=1,maximum-scale=1,user-scalable=no">
-<meta name="google" content="notranslate">
-<link rel="icon" href="favicon.png">
-<title>Fengz' Cloud</title>
+<meta charset="UTF-8" />
+<meta http-equiv="X-UA-Compatible" content="IE=edge" >
+<link rel="shortcut icon" href="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACgAAAAoBAMAAAB+0KVeAAAAGFBMVEUAAAA7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozsmr7C1AAAAB3RSTlMA8o3HRiCjAZ7XVAAAAFRJREFUKM9jGAUMDE6GwiroYkHi5eWFqqhirOnlQFAWgCLIVA4GCiiCjhBBERRBdYhgEYqgOUSwGEVQHCJYSEgQoZ2QRQgnEXI8wpsEAgQRdKOAAQCvriuz6lBMNwAAAABJRU5ErkJggg==" />
+<meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+<title> Loading... </title>
 <script>
-window.config = {"title":"Fengz' Cloud","user":"YCF","repo":"ycf.github.com","token":"10636da3316a7ac0c12d80bccafccaede4b6ea1c","authors":"YCF","per_page":"15","sandbox":"false"}
+window.config = {
+  organization: false,
+  order: 'UPDATED_AT',
+  title: 'Fengz\' cloud',
+  user: 'ycf',
+  repository: 'ycf.github.com',
+  authors: '',
+  ignores: '',
+  hash: 'eebOAETcCWPFUWCECFWdecTabcfXXdEfecUfbWACc3luYy5zaA==',
+  perpage: 10,
+}
 </script>
-
-<style>html.loading{height:100%;text-align:center}html.loading body{height:100%}html.loading body:before{content:'';width:30px;height:30px;-webkit-border-radius:30px;border-radius:30px;-webkit-animation:loading 1.5s linear forwards infinite;animation:loading 1.5s linear forwards infinite;display:inline-block;border-top:4px solid #0089fa;border-right:4px solid #ff002b;border-bottom:4px solid #ffa900;border-left:4px solid #00a753;vertical-align:middle}html.loading body:after{content:'';display:inline-block;height:100%;vertical-align:middle}html.loading .container{display:none}@keyframes loading{100%{transform:rotate(360deg)}}@-webkit-keyframes loading{100%{-webkit-transform:rotate(360deg)}}</style>
+<style>
+  .loading,
+  .error,
+  .transition {
+    height: 100%;
+  }
+  .loading body,
+  .error body,
+  .transition body {
+    height: 100%;
+  }
+  #loader {
+    text-align: center;
+    position: fixed;
+    z-index: 3;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    opacity: 0;
+    visibility: hidden;
+    -webkit-transition: all .3s ease;
+    transition: all .3s ease;
+    background-color: rgba(255, 255, 255, .95);
+  }
+  .loading #loader {
+    opacity: 1;
+    visibility: visible;
+  }
+  .loading #loader div {
+    display: inline-block;
+    width: 50px;
+    height: 50px;
+    vertical-align: middle;
+    -webkit-border-radius: 3px;
+    border-radius: 3px;
+    background-color: #fff;
+    -webkit-box-shadow: 0 0 3px rgba(0, 0, 0, .15);
+    box-shadow: 0 0 3px rgba(0, 0, 0, .15);
+  }
+  .loading #loader div:before {
+    content: '';
+    width: 26px;
+    height: 26px;
+    display: block;
+    margin: 8px auto 0;
+    -webkit-border-radius: 20px;
+    border-radius: 20px;
+    -webkit-animation: loading .5s linear forwards infinite;
+    animation: loading .5s linear forwards infinite;
+    border-top: 4px solid #0089fa;
+    border-right: 4px solid #ff002b;
+    border-bottom: 4px solid #ffa900;
+    border-left: 4px solid #00a753;
+  }
+  .loading #loader:after {
+    content: '';
+    display: inline-block;
+    height: 100%;
+    vertical-align: middle;
+  }
+  @keyframes loading { 100% { transform: rotate(360deg) } }
+  @-webkit-keyframes loading { 100% { -webkit-transform: rotate(360deg) } }
+</style>
 </head>
-
 <body>
-
-    <div class="container">
-
-        <div class="left">
-            <div id="user"></div>
-            <div id="posts"></div>
-            <div class="btns">
-                <button class="button" id="prev">← Newer Posts</button>
-                <button class="button" id="next">Older Posts →</button>
-            </div>
-
-            <div id="footer">
-                Powered by <a href="https://github.com/LoeiFy/Mirror" target="_blank">Mirror</a> & GitHub .
-                <a id="source" target="_blank">Source</a>
-                <span id="sandbox"> | <a>SandBox</a></span>
-            </div>
-
-            <div class="sandbox">
-                <div id="close">&#x2716;</div>
-                <form id="form" autocomplete="off">
-                    <p>Submit the imformation and preview</p>
-                    <input type="text" name="title" placeholder="Blog Title">
-                    <input type="text" name="user" placeholder="GitHub Username">
-                    <input type="text" name="repo" placeholder="GitHub Repo">
-                    <input type="text" name="authors" placeholder="Authors Filter(Optional)">
-                    <input type="number" name="per_page" placeholder="Number of Per Page">
-                    <button type="submit" name="submit" class="button">Start</button>
-                </form>
-            </div>
-        </div>
-
-
-        <div class="right">
-            <div id="post"></div>
-        </div>
-
-    </div>
-
-<script type="text/javascript" src="/build.c4688d3ba5719cd2510e.js"></script></body>
-<script type="text/javascript" src="http://tajs.qq.com/stats?sId=19326457" charset="UTF-8"></script>
+<div id="bar"></div>
+<div class="page home">
+  <div>
+  <div id="user"></div>
+  <div id="posts"></div>
+  </div>
+</div>
+<div class="page single">
+  <div>
+  <div id="post"></div>
+  <div id="comments"></div>
+  </div>
+</div>
+<div id="loader"><div></div></div>
+<script src="./index.04eb6053.js"></script>
+</body>
 </html>
