--- a/index.html
+++ b/index.html
@@ -100,5 +100,6 @@ window.config = {
 </div>
 <div id="loader"><div></div></div>
 <script src="./index.04eb6053.js"></script>
+<script type="text/javascript" src="http://tajs.qq.com/stats?sId=19326457" charset="UTF-8"></script>
 </body>
 </html>
